--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.6",
-    "alchemy-sdk": "^2.2.5",
-    "ethers": "^5.7.2",
+    "alchemy-sdk": "^3.3.1",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
